--- a/public/dashboardStyle.css
+++ b/public/dashboardStyle.css
@@ -3,22 +3,38 @@ body {
     background-color: #f8f9fa;
     margin: 0;
     padding: 0;
+    height: 100vh;
 }
-
+@media only screen and (max-width: 56.25em) {
+    :root {
+        --two-col-layout: 1;
+        --four-col-layout: 1;
+        --three-col-layout: 1;
+    }
+}
+@media only screen and (max-width: 59em) {
+    :root {
+        --two-col-layout: 1;
+        --four-col-layout: 1;
+        --three-col-layout: 1;
+    }
+}
 .wrapper {
     display: flex;
     width: 100%;
 }
+
 .logoa {
     min-width: 100px;
     max-width: 100px;
 }
 #sidebar {
     min-width: 250px;
-    max-width: 250px;
+    height: 100vh;
     background: #343a40;
     color: #fff;
     transition: all 0.3s;
+    position: fixed;
 }
 
 #sidebar .sidebar-header {
@@ -52,27 +68,9 @@ body {
 #content {
     width: 100%;
     padding: 20px;
-}
-
-.card {
-    border-radius: 8px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-}
-
-.card-title {
-    color: #495057;
-}
-
-.card-body h2 {
-    font-size: 2.5em;
-    color: #343a40;
-}
-
-#sidebarCollapse {
-    background: #7386d5;
-    color: #fff;
-}
-
-#sidebarCollapse:hover {
-    background: #6a79c1;
+    margin-left: 250px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 4.5%;
 }
