--- a/public/perfilaStyle.css
+++ b/public/perfilaStyle.css
@@ -196,21 +196,24 @@ button {
     color: #fff;
     cursor: pointer;
 }
-/****Footer****/
+/* Footer */
 body .section-footer {
+    margin-top: 9.8%;
     position: relative;
-    margin-top: 7.5%;
     padding-top: 5%;
     background-color: #000000;
-    color: white
+    color: white;
 }
+
 body .section-footer .footer-box .footer-nav h3 {
     margin: 10px 0px;
 }
+
 body .section-footer .footer-box .footer-nav li {
     font-size: 1.7rem;
     list-style: none;
 }
+
 body .section-footer .copyrights {
     cursor: pointer;
     display: flex;
@@ -218,4 +221,18 @@ body .section-footer .copyrights {
     align-items: center;
     flex-direction: column;
     max-width: 100%;
+}
+
+/* Estilos para pantallas más pequeñas */
+@media only screen and (max-width: 768px) {
+    body .section-footer {
+        margin-top: 10%; /* Ajusta el margen superior para dispositivos más pequeños */
+    }
+}
+
+/* Estilos para pantallas aún más pequeñas */
+@media only screen and (max-width: 576px) {
+    body .section-footer {
+        margin-top: 15%; /* Ajusta el margen superior para dispositivos más pequeños */
+    }
 }
